--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@types/bluebird": "^3.5.30",
+    "@types/validator": "^13.0.0",
     "sequelize": "^5.21.6",
     "sequelize-cli": "^5.5.1"
   },
