--- a/.sequelizerc
+++ b/.sequelizerc
@@ -4,7 +4,7 @@ const path = require('path');
 module.exports = {
     // FIXME: move to a universal config folder
   'config': path.resolve('config', 'sequelize.json'),
-  'models-path': path.resolve('src', 'models'),
+  'models-path': path.resolve('src', 'db', 'models'),
   'seeders-path': path.resolve('seeders'),
-  'migrations-path': path.resolve('migrations')
+  'migrations-path': path.resolve('src', 'db', 'migrations')
 };
