--- a/package.json
+++ b/package.json
@@ -5,11 +5,23 @@
   "main": "index.js",
   "dependencies": {
     "@types/bluebird": "^3.5.30",
+    "@types/umzug": "^2.2.3",
     "@types/validator": "^13.0.0",
+    "mysql2": "^2.1.0",
     "sequelize": "^5.21.6",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "typescript": "^3.8.3",
+    "umzug": "^2.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^2.0.4",
+    "tslint-config-prettier": "^1.18.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
