--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "tsc && node dist/scripts/migrate"
+  },
   "dependencies": {
     "@types/bluebird": "^3.5.30",
     "@types/umzug": "^2.2.3",
@@ -21,9 +25,6 @@
     "eslint-plugin-prettier": "^3.1.2",
     "prettier": "^2.0.4",
     "tslint-config-prettier": "^1.18.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC"
