--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/bluebird": "^3.5.30",
     "@types/umzug": "^2.2.3",
     "@types/validator": "^13.0.0",
+    "dotenv": "^8.2.0",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.6",
     "sequelize-cli": "^5.5.1",
