--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@types/bluebird": "^3.5.30",
+    "@types/knex": "^0.16.1",
     "@types/umzug": "^2.2.3",
     "@types/validator": "^13.0.0",
     "dotenv": "^8.2.0",
     "mysql2": "^2.1.0",
+    "oqb": "^0.2.0",
     "sequelize": "^5.21.6",
     "sequelize-cli": "^5.5.1",
     "typescript": "^3.8.3",
